tests/fixtures/invalid/interpolation_unterminated.lby
fn main -> string
    "a=${n"
